frontend/src/Components/App.css
html {
  width: revert;
}

body {
  margin: 0px 0px;
  padding: 0px 0px;
  background-color: transparent;
}

img {
  width: 50px;
  height: 40px;
  margin-left: 10px;
}

i {
  padding: 0px 0px;
  margin: 0px 0px;
  font-family: "Bebas Neue", cursive;
}

label {
  margin: 0px 0px;
}

select {
  font-size: small;
}

.button {
  border-radius: 8px;
  border-color: white;
  margin: 10px 10px;
  padding: 5px 10px;
  font-size: 18px;
  font-weight: bold;
  color: white;
  background-color: #7e0303;
}

.button:hover {
  border-radius: 8px;
  background-color: #df0505;
  color: white;
  margin-bottom: 60px;
}

.header {
  display: flex;
  flex-flow: wrap;
  background-color: #efefef;
  width: 100%;
  margin-right: auto;
}

.search_mainPage {
  border: 1px solid rgb(255, 244, 241);
  width: 180px;
  padding: 5px 5px;
  border-radius: 10px;
  background-color: rgb(250, 250, 250);
}

.secondPage_header {
  background-color: #efefef;
  padding: 10px 5px;
}

.logo {
  font-size: 18px;
  font-weight: bold;
  color: #66180f;
  padding: 2px 2px;
  margin-right: 10px;
  padding-top: 5px;
}

.logo:hover {
  color: #991e08;
  cursor: pointer;
}

.secondPage_search {
  border: 1px solid rgb(253, 253, 253);
  width: 100%;
  border-radius: 10px;
  padding-left: 5px;
  background-color: rgb(250, 250, 250);
}

.plain_header {
  display: flex;
  flex-flow: wrap;
  background-color: #efefef;
  width: 100%;
  margin-right: auto;
  padding: 5px 5px;
}

.ask_button {
  display: flex;
  justify-content: space-between;
}

.ask_button {
  border-radius: 8px;
  border-color: white;
  font-size: 18px;
  font-weight: bold;
  color: black;
  background-color: #e9391b;
  padding: 4px 4px;
}

.Questions_amount {
  color: #8b1609;
  font-size: 30px;
  padding-top: 35px;
  font-weight: bolder;
  font-family: "Bebas Neue", cursive;
  margin-left: 20px;
}

.question_card {
  background-color: rgb(255, 255, 255);
  border-top: 1px solid #a01800;
  margin-top: 20px;
  padding-top: 10px;
  width: 80%;
  height: 300px;
  overflow: scroll;
}
.question_card:hover {
  transform: scale(1.03);
  box-shadow: 0px 8px 16px 0px rgba(92, 4, 4, 0.2);
  border: none;
}

.title_font {
  font-size: 12px;
  color: rgb(107, 11, 6);
  font-weight: bolder;
  margin-left: 10px;
  padding-top: 5px;
  height: fit-content;
  text-overflow: ellipsis;
  width: auto;
  white-space: break-spaces;
  overflow: hidden;
  font-family: "Fjalla One", sans-serif;
}

.question_font {
  font-size: 15px;
  font-weight: bold;
  color: rgb(10, 1, 1);
  margin-left: 10px;
  text-overflow: ellipsis;
  width: 80%;
  white-space: wrap;
  transition: 200ms;
}

.question_font_second_page {
  font-size: 20px;
  font-weight: bold;
  color: rgb(109, 10, 10);
  overflow: auto;
  margin-left: 10px;
  height: 200px;
}

.has_answers {
  color: rgb(66, 8, 8);
  width: fit-content;
  font-size: 15px;
  font-weight: bold;
  margin-left: auto;
}

.no_answers {
  color: rgb(66, 8, 8);
  width: fit-content;
  font-size: 15px;
  font-weight: bold;
  margin-left: auto;
}

.view {
  color: rgb(66, 8, 8);
  width: fit-content;
  font-size: 13px;
  font-weight: bold;
  margin-left: auto;
  margin-right: 2px;
}

.No_view {
  font-size: 13px;
  font-weight: bold;
  margin-left: 10px;
  margin-right: 2px;
}

.date {
  font-weight: bold;
  color: rgb(184, 183, 183);
  padding-bottom: 2px;
  margin-bottom: 2px;
}

.dataTime_container {
  margin-left: 2px;
}

.view_container {
  display: flex;
  flex-direction: column;
  height: 20px;
  padding-bottom: 4px;
}

.text {
  font-size: 15px;
  margin-top: 30px;
  font-weight: bold;
}

.category {
  width: 3cm;
  font-size: 20px;
  font-weight: bold;
  text-align: center;
  background-color: #5a1d17;
  padding-bottom: 5px;
  padding-top: 5px;
  color: white;
}

.form_style {
  background-color: rgb(70, 17, 17);
  border-radius: 10px;
  color: white;
  margin-bottom: 100px;
}

.Answer_form {
  margin-top: 100px;
  margin-bottom: 60px;
}

.header_button {
  font-size: small;
  font-weight: bold;
  font-size: smaller;
  color: #a31607;
  display: contents;
  border: none;
}

.header_button:hover {
  border-top: 10px solid #ed4343;
  text-decoration: none;
}
.ask_hover {
  transition: 200ms;
}
.ask_hover:hover {
  text-decoration: none;
  transform: scale(1.2);
}
.pagination_button {
  margin-left: 2px;
  width: 8cm;
  text-align: center;
  font-size: 12px;
  padding: 0px 0px;
}

.pagination > li > a {
  border: 1px solid #a31607;
}

.pagination > .active > a {
  text-decoration: none;
}

.pagination > .active > a,
.pagination > .active > span,
.pagination > .active > a:hover,
.pagination > .active > span:hover,
.pagination > .active > a:focus,
.pagination > .active > span:focus {
  background-color: #a31607;
  color: white;
}
.pagination > li > a:hover {
  background-color: rgb(199, 7, 7);
  text-decoration: none;
}

.pagination_button:hover {
  cursor: pointer;
  text-decoration: none;
}

.question_needs_answer {
  font-size: 30px;
  color: rgb(107, 9, 9);
  text-align: center;
  font-weight: bolder;
  margin: 30px 2px;
}

.question_has_answer {
  font-size: 30px;
  color: rgb(95, 22, 20);
  font-weight: bolder;
  margin: 40px;
  margin-left: 13%;
  margin-top: 100px;
}

label.title_font:hover {
  text-decoration: none;
  color: rgb(194, 41, 14);
  cursor: pointer;
}

.title_Answer {
  font-size: 30px;
  color: rgb(32, 23, 138);
  font-weight: bolder;
  margin-left: 15%;
  margin-bottom: 10px;
  margin-top: auto;
  overflow: auto;
}

.answer_form_top_text {
  font-size: 30px;
  color: rgb(124, 34, 27);
  font-weight: bolder;
  margin-left: 4%;
  margin-top: auto;
}

span.answer_form_top_text {
  margin-bottom: 10px;
  display: block;
}

.title_question {
  font-size: 30px;
  color: rgb(58, 19, 13);
  font-weight: bolder;
  cursor: pointer;
}

.question_box {
  border-top: 3px solid rgb(92, 17, 17);
  border-bottom: 3px solid rgb(92, 17, 17);
  width: 80%;
}

.answer_font {
  font-size: 20px;
  font-weight: bold;
}

.answer_box {
  background-color: white;
  width: 80%;
  overflow: auto;
  height: 400px;
  border-top: 2px solid rgb(85, 26, 26);
  border-bottom: 2px solid rgb(85, 26, 26);
}

.nameOfPerson {
  font-size: 25px;
  font-weight: bolder;
  padding-top: 10px;
  color: rgb(32, 23, 138);
}

.loading_text {
  font-size: 45px;
  color: rgb(128, 26, 0);
  margin: 20px;
  margin-left: auto;
}

.comment {
  font-weight: bold;
  color: #7e898d;
  border-bottom: 1px solid rgb(200, 198, 198);
  margin-top: 4px;
  width: 80%;
  overflow: auto;
  margin-left: auto;
  margin-bottom: 10px;
}

.title_comment {
  font-weight: bold;
  color: #2f3133;
  padding-bottom: 5px;
}

.comment_button {
  margin-left: auto;
  display: flex;
  color: #065794;
  cursor: pointer;
}

.comment_icon {
  background-color: rgb(92, 4, 4);
  color: white;
  margin-left: 10%;
}

span.btn.btn-link.add_comment {
  margin-left: 10%;
}

.footer {
  background-color: #efefef;
  cursor: pointer;
}
footer.page-footer {
  bottom: 0;
  color: black;
  text-decoration: none;
}
.text-center {
  font-size: 25px;
  color: rgb(77, 8, 8);
}
.copyright {
  color: rgb(77, 8, 8);
  text-align: center;
}
a.copyRight2 {
  color: black;
}

@media only screen and (min-width: 500px) and (max-width: 799px) {
  select {
    font-size: 13px;
  }

  img {
    margin-left: 10px;
  }

  .header {
    display: flex;
    background-color: #efefef;
  }

  .header_button {
    padding-top: 8px;
    margin-right: 5px;
    font-size: 12px;
    display: block;
  }

  .askbtn {
    text-decoration: none;
    padding-top: 20px;
    font-weight: bold;
    font-size: 15px;
  }
  .margin_headerBtn {
    padding: 5px 5px;
    justify-content: space-around;
    display: flex;
  }
  .search_mainPage {
    border: 1px solid rgb(255, 244, 241);
    width: 150px;
    border-radius: 10px;
    background-color: rgb(250, 250, 250);
  }
  .title_font {
    font-size: 25px;
    color: rgb(98, 15, 3);
    font-weight: bolder;
    margin-left: 10px;
    padding-top: 5px;
    white-space: break-spaces;
    text-overflow: unset;
    width: fit-content;
  }
  .Questions_amount {
    margin-left: 80px;
  }
  .dataTime_container {
    margin-left: 30px;
  }
  .secondPage_header {
    background-color: #efefef;
    padding: 10px 5px;
  }
  .logo {
    font-size: 18px;
    font-weight: bold;
    color: #66180f;
    padding-top: 8px;
  }
  .secondPage_search {
    border-bottom: 1px solid rgb(255, 244, 241);
    width: 400px;
    border-radius: 10px;
    padding-left: auto;
    background-color: rgb(250, 250, 250);
    padding: 5px 5px;
  }
}

@media only screen and (min-width: 800px) {
  .search_mainPage {
    width: 300px;
  }
  .header {
    display: flex;
    background-color: #efefef;
    width: 100%;
    margin-right: auto;
  }

  .header_button {
    padding-top: 5px;
    margin-right: 35px;
    font-size: 15px;
    display: block;
  }

  .header_button:hover {
    color: #ed4343;
    border-top: 10px solid #ed4343;
  }

  .askbtn {
    margin-top: 15px;
    text-decoration: none;
    font-size: 15px;
  }
  .search_mainPage {
    border: 1px solid white;
    width: 290px;
    padding: 5px 5px;
    border-radius: 10px;
    margin-left: 40px;
    background-color: rgb(250, 250, 250);
  }
  select {
    font-size: 15px;
  }

  .text {
    font-size: 30px;
  }
  .pagination_button {
    margin-left: auto;
    width: 8cm;
    text-align: center;
    padding: 6px 5px;
  }
  .title_font {
    font-size: 25px;
    font-weight: bolder;
    margin-left: 10px;
    padding-top: 5px;
    white-space: unset;
    text-overflow: unset;
    width: fit-content;
  }
  .Questions_amount {
    margin-left: 80px;
  }
  .dataTime_container {
    margin-left: 25px;
  }
  .secondPage_header {
    background-color: #efefef;
    padding: 10px 5px;
  }
  img {
    margin-left: 20px;
  }
  .logo {
    font-size: 25px;
    font-weight: bold;
    color: #66180f;
    padding-top: 3px;
  }
  .secondPage_search {
    border: 1px solid rgb(255, 244, 241);
    width: 500px;
    border-radius: 10px;
    padding: 5px 5px;
    background-color: rgb(250, 250, 250);
  }
  .question_font_second_page {
    height: fit-content;
  }
  .answer_box {
    background-color: white;
    width: 80%;
    height: fit-content;
    overflow: unset;
    border-top: 2px solid rgb(85, 26, 26);
    border-bottom: 2px solid rgb(85, 26, 26);
  }
}

@media only screen and (min-width: 1100px) {
  .search_mainPage {
    border: 1px solid white;
    width: 450px;
    padding: 5px 5px;
    border-radius: 10px;
    margin-left: 40px;
    background-color: rgb(250, 250, 250);
  }
  select {
    font-size: 18px;
  }
  .logo {
    padding-top: 2px;
  }
  .askbtn {
    margin-top: 15px;
    text-decoration: none;
    font-size: 18px;
  }
  .askbtn:hover {
    text-decoration: none;
  }
  .Questions_amount {
    margin-left: 100px;
  }
  .comment {
    font-weight: bold;
    color: #7e898d;
    border-bottom: 1px solid rgb(200, 198, 198);
    margin-top: 4px;
    width: 80%;
    overflow: auto;
    margin-left: 100px;
  }
  .answer_form_top_text {
    margin-left: 85px;
  }
}

@media only screen and (min-width: 1400px) {
  .answer_form_top_text {
    margin-left: 150px;
  }
  .logo {
    padding-top: 2px;
  }
}

